Use List.of() in StreamingService and classes extending it.